@@ -10,7 +10,7 @@ public final class MessageBodyRetriever {
     public static byte[] getBinaryData(MessageBody messageBody) {
         List<byte[]> binaryData = messageBody.getBinaryData();
 
-        return CollectionUtils.isEmpty(binaryData) ? null : binaryData.get(0);
+        return CollectionUtils.isEmpty(binaryData) ? null : binaryData.getFirst();
     }
 
     private MessageBodyRetriever() {
